--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,26 +9,17 @@ jobs:
   fetch:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.10'
-
-      - id: cache-pipenv
-        uses: actions/cache@v2
-        with:
-          path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+      - uses: actions/checkout@v3
 
       - name: Install pipenv
-        run: |
-          python -m pip install --upgrade pipenv wheel
+        run: pipx install pipenv
 
-      - name: Install dependencies
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
-        run: |
-          pipenv install
+      - uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+          cache: "pipenv"
+
+      - run: pipenv install
 
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
