--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,16 +21,6 @@ jobs:
 
       - run: pipenv install
 
-      - name: Download artifact
-        uses: dawidd6/action-download-artifact@v2
-        continue-on-error: true
-        with:
-          github_token: ${{secrets.GITHUB_TOKEN}}
-          workflow: main.yml
-          workflow_conclusion: success
-          name: session-artifact
-          path: ./
-
       - name: Run main.py
         run: pipenv run python main.py
         env:
@@ -42,9 +32,4 @@ jobs:
           sb: "${{ secrets.SB }}"
           xs: "${{ secrets.XS }}"
           GROUP_ID: "${{ secrets.GROUP_ID }}"
-
-      - name: Upload run artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: session-artifact
-          path: session.txt
+          INTERVAl: 15
