--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install deps
-        run: |
-          pipx install pipenv
-          sudo apt-get install -y libxml2-dev libxslt-dev
+      - name: Install pipenv
+        run: pipx install pipenv
 
       - uses: actions/setup-python@v4
         with:
