--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
+#facebook cookies
 c_user=""
-datr=""
-fr=""
-sb=""
 xs=""
+
+#facebook group id
 GROUP_ID=""
+
+#telegram
 TELEGRAM_BOT_TOKEN=""
 TELEGRAM_CHAT_ID=""
-#INTERVAL=""
+
+LOOKBACK="30" #minutes
