added LEEWAY and changed environment variable names

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,11 @@ c_user=""
 xs=""
 
 #facebook group id
-GROUP_ID=""
+FACEBOOK_GROUP_ID=""
 
 #telegram
 TELEGRAM_BOT_TOKEN=""
 TELEGRAM_CHAT_ID=""
 
 LOOKBACK="30" #minutes
+LEEWAY="2" #minutes
