--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,6 @@ jobs:
           TELEGRAM_CHAT_ID: "${{ secrets.TELEGRAM_CHAT_ID }}"
           c_user: "${{ secrets.C_USER }}"
           xs: "${{ secrets.XS }}"
-          GROUP_ID: "${{ secrets.GROUP_ID }}"
+          FACEBOOK_GROUP_ID: "${{ secrets.GROUP_ID }}"
           LOOKBACK: 30
+          LEEWAY: 2
