leeway is not required

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,4 @@ FACEBOOK_GROUP_ID=""
 TELEGRAM_BOT_TOKEN=""
 TELEGRAM_CHAT_ID=""
 
-LOOKBACK="30" #minutes
-LEEWAY="2" #minutes
+LOOKBACK="30" # minutes (to be used when session.txt is not found)
